@@ -1,3 +1,8 @@
+2006-08-03  Richard Hult  <richard@imendio.com>
+
+	* loudmouth/lm-sha.c: Make the sha functions static so they are
+	not exposed to apps/libraries using loudmout.
+
 2006-08-01  Mikael Hallendal  <micke@imendio.com>
 
 	* loudmouth/lm-ssl-gnutls.c: (_lm_ssl_read):
